--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -3,7 +3,10 @@ NAME = form
 PROG =	main\
 		Bureaucrat\
 		AForm\
-		ShrubberyCreationForm
+		ShrubberyCreationForm\
+		RobotomyRequestForm\
+		PresidentialPardonForm
+
 
 OBJ_DIR = obj
 
