--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
 		"stack": "cpp",
 		"__std_stream": "cpp",
 		"filesystem": "cpp",
-		"__functional_03": "cpp"
+		"__functional_03": "cpp",
+		"list": "cpp",
+		"__memory": "cpp"
 	}
 }
